Fix: overflow text in all projects

--- a/themes/bugkick_theme/less/projects-list.less
+++ b/themes/bugkick_theme/less/projects-list.less
@@ -56,8 +56,12 @@
 }
 /* Shrinked the spacing under the title */
 #content #main .project-center .project-description a h3{
-    height: 22px;
-    line-height: 22px;
+    height: 30px;
+    line-height: 30px;
+    padding: 0 15px 0 0;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .project-center a img{
     float: left;
